# inference-staking

./: .env  .example.env  .gitignore  .prettierignore  .prettierrc  Anchor.toml  Anchor.toml.bak  README.md  Taskfile.yml  eslint.config.js  package.json  tsconfig.base.json  tsconfig.json
keys/: KEYS_README.md
programs/inference-staking/: Cargo.toml
programs/inference-staking/src/: constants.rs  emissions.rs  error.rs  lib.rs  macros.rs  utils.rs
programs/inference-staking/src/events/: accrue_reward_event.rs  cancel_unstake_event.rs  change_operator_admin_event.rs  change_operator_staking_record_event.rs  claim_unstake.rs  claim_unstake_event.rs  claim_usdc_earnings_event.rs  complete_accrue_reward.rs  complete_claim_usdc_earnings.rs  mod.rs  operator_auto_stake_event.rs  set_halt_status_event.rs  slash_stake.rs  slash_stake_event.rs  stake.rs  stake_event.rs  sweep_closed_pool_usdc_dust_event.rs  unstake.rs  unstake_event.rs  update_operator_pool_event.rs  withdraw_operator_reward_commission_event.rs  withdraw_operator_usdc_commission_event.rs
programs/inference-staking/src/instructions/: mod.rs
programs/inference-staking/src/instructions/operator_pool/: change_operator_admin.rs  change_operator_staking_record.rs  close_operator_pool.rs  create_operator_pool.rs  mod.rs  set_halt_status.rs  slash_stake.rs  sweep_closed_pool_usdc_dust.rs  update_operator_pool.rs  withdraw_operator_commission.rs  withdraw_operator_reward_commission.rs  (+1 more)
programs/inference-staking/src/state/: mod.rs  operator_pool.rs  pool_overview.rs  reward_record.rs  staking_record.rs
(+82 files in other folders)
