[package]
name = "inference-staking"
version = "0.1.0"
description = "Inference.net Staking Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "inference_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
devnet = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
solana-security-txt = "1.1.1"
